datasets/manifests/api-deprecation/m131_deprecated_deployment_1.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: deprecated_deployment_1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: old-deploy-1
  template:
    metadata:
      labels:
        app: old-deploy-1
    spec:
      containers:
      - name: app
        image: nginx
