datasets/manifests/api-deprecation/m136_deprecated_deployment_6.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: deprecated_deployment_6
spec:
  replicas: 1
  selector:
    matchLabels:
      app: old-deploy-6
  template:
    metadata:
      labels:
        app: old-deploy-6
    spec:
      containers:
      - name: app
        image: nginx
