datasets/manifests/api-deprecation/m141_deprecated_deployment_11.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: deprecated_deployment_11
spec:
  replicas: 1
  selector:
    matchLabels:
      app: old-deploy-11
  template:
    metadata:
      labels:
        app: old-deploy-11
    spec:
      containers:
      - name: app
        image: nginx
