datasets/manifests/api-deprecation/m156_deprecated_deployment_26.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: deprecated_deployment_26
spec:
  replicas: 1
  selector:
    matchLabels:
      app: old-deploy-26
  template:
    metadata:
      labels:
        app: old-deploy-26
    spec:
      containers:
      - name: app
        image: nginx
