datasets/manifests/api-deprecation/m132_deprecated_ingress_2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: deprecated_ingress_2
spec:
  rules:
  - host: old2.example.test
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
