datasets/manifests/api-deprecation/m137_deprecated_ingress_7.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: deprecated_ingress_7
spec:
  rules:
  - host: old7.example.test
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
