datasets/manifests/api-deprecation/m142_deprecated_ingress_12.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: deprecated_ingress_12
spec:
  rules:
  - host: old12.example.test
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
