datasets/manifests/api-deprecation/m147_deprecated_ingress_17.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: deprecated_ingress_17
spec:
  rules:
  - host: old17.example.test
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
