datasets/manifests/api-deprecation/m152_deprecated_ingress_22.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: deprecated_ingress_22
spec:
  rules:
  - host: old22.example.test
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
