datasets/manifests/api-deprecation/m157_deprecated_ingress_27.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: deprecated_ingress_27
spec:
  rules:
  - host: old27.example.test
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
